<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_v"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/feil_imag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="-15dp"
        android:contentDescription="@string/feil_tegn"
        app:srcCompat="@drawable/feil_x" />

    <ImageView
        android:id="@+id/rektig_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp"
        android:contentDescription="@string/rektig_tegn"
        app:srcCompat="@drawable/t"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/spørsmål"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="320dp"
        android:hint="@string/spørsmål"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/rektig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="260dp"
        android:layout_marginBottom="420dp"
        android:text="@string/riktig_teller"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/feil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="420dp"
        android:text="@string/feil_teller"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/svar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="220dp"
        android:hint="@string/riktig_svaret"
        android:textAlignment="center" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="445dp"
        android:layout_toStartOf="@+id/feil_imag"
        android:layout_toEndOf="@+id/rektig_img" />

    <android.support.v7.widget.GridLayout
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        app:columnCount="3">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/buttonslett"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slett"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/buttonok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            app:layout_column="2"
            app:layout_row="3" />
    </android.support.v7.widget.GridLayout>

    <TextView
        android:id="@+id/input_verdi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="260dp"
        android:hint="@string/ditt_svar"
        android:textAlignment="center" />


</RelativeLayout>