<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="check1"
        android:title="Norsk" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="check2"
        android:title="Tysk" />

    <EditTextPreference
        android:defaultValue="Default value"
        android:key="edit_text_preference_1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/Velg_antall_sporsmal" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="først_valg"
        android:title="@string/Velg_fem" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="andre_valg"
        android:title="@string/Velg_ti" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="tredje_valg"
        android:title="@string/Velg_femten" />

</PreferenceScreen>

