<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="12dp"
    android:background="@drawable/main_background_v">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/statistikk" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="40dp"
        android:text="@string/innstilling" />

    <ImageButton
        android:id="@+id/setting_img"
        android:layout_width="89dp"
        android:layout_height="91dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="55dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/setting"
        app:srcCompat="@drawable/setting_icon" />

    <ImageButton
        android:id="@+id/play_imag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_marginBottom="50dp"
        android:layout_toStartOf="@+id/setting_img"
        android:background="@android:color/transparent"
        android:contentDescription="@string/spill_knapen"
        app:srcCompat="@drawable/play_icon" />

    <ImageButton
        android:id="@+id/static_imag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"

        android:layout_marginBottom="55dp"
        android:layout_toStartOf="@+id/play_imag"
        android:background="@android:color/transparent"
        android:contentDescription="@string/statiskt_knapp"
        app:srcCompat="@drawable/statistic_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:layout_toStartOf="@+id/textView3"
        android:text="@string/spill" />
</RelativeLayout>